k8s/miniodev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: miniodev
  name: miniodev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: miniodev
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: miniodev
    spec:
      containers:
        - args:
            - server
            - /data
            - --console-address
            - :9001
          image: minio/minio
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 20
          name: miniodev
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: miniodev-claim0
      hostname: minio
      restartPolicy: Always
      volumes:
        - name: miniodev-claim0
          persistentVolumeClaim:
            claimName: miniodev-claim0
status: {}
