k8s/nsqadmindev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nsqadmindev
  name: nsqadmindev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nsqadmindev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: nsqadmindev
    spec:
      containers:
        - args:
            - /nsqadmin
            - --lookupd-http-address=10.110.0.64:4161
          image: nsqio/nsq
          name: nsqadmindev
          ports:
            - containerPort: 4171
          resources: {}
      restartPolicy: Always
status: {}
