k8s/nsqddev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nsqddev
  name: nsqddev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nsqddev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: nsqddev
    spec:
      containers:
        - args:
            - /nsqd
            - --lookupd-tcp-address=10.110.0.64:4160
          image: nsqio/nsq
          name: nsqddev
          ports:
            - containerPort: 4150
            - containerPort: 4151
          resources: {}
      restartPolicy: Always
status: {}
