k8s/smtpdev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: smtpdev
  name: smtpdev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: smtpdev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: smtpdev
    spec:
      containers:
        - image: inbucket/inbucket:stable
          name: smtpdev
          ports:
            - containerPort: 9000
            - containerPort: 2500
          resources: {}
      restartPolicy: Always
status: {}
