k8s/nsqddev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nsqddev
  name: nsqddev
spec:
  ports:
    - name: "4150"
      port: 4150
      targetPort: 4150
    - name: "4151"
      port: 4151
      targetPort: 4151
  selector:
    io.kompose.service: nsqddev
status:
  loadBalancer: {}
