k8s/smtpdev-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: smtpdev
  name: smtpdev
spec:
  ports:
    - name: "9025"
      port: 9025
      targetPort: 9000
      nodePort: 39025
    - name: "2500"
      port: 2500
      targetPort: 2500
      nodePort: 32500
  selector:
    io.kompose.service: smtpdev
status:
  loadBalancer: {}
